--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
         </nav>
         <ul class="header-contact-box">
           <li>
-            <a class="header header-contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="header header-contact" href="mailto:info@devstudio.com">
+              <svg class="test" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li>
@@ -192,5 +195,8 @@
         </address>
       </div>
     </footer>
+    <svg class="flex" width="16" height="12">
+      <use href="./images/icons.svg#icon-envelope"></use>
+    </svg>
   </body>
 </html>
