--- a/index.html
+++ b/index.html
@@ -34,15 +34,18 @@
         <ul class="header-contact-box">
           <li>
             <a class="header header-contact" href="mailto:info@devstudio.com">
-              <svg class="test" width="16" height="12">
+              <svg class="header-icons" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="header header-contact" href="tel:+48111111111"
-              >+48 111 111 111</a
+            <a class="header header-contact" href="tel:+48111111111">
+              <svg class="header-icons" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +48 111 111 111</a
             >
           </li>
         </ul>
