--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
       <section class="section">
         <ul class="container list-box">
           <li>
+            <div class="list-icon-box">
+              <svg width="65px" height="70px">
+                <use href="./images/icons.svg#icon-antenna-1"></use>
+              </svg>
+            </div>
             <h3 class="list-title">LOREM IPSUM</h3>
             <p class="list-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -75,6 +80,11 @@
             </p>
           </li>
           <li>
+            <div class="list-icon-box">
+              <svg width="67px" height="70px">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="list-title">LOREM IPSUM</h3>
             <p class="list-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -82,6 +92,11 @@
             </p>
           </li>
           <li>
+            <div class="list-icon-box">
+              <svg width="70px" height="54px">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="list-title">LOREM IPSUM</h3>
             <p class="list-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -89,6 +104,11 @@
             </p>
           </li>
           <li>
+            <div class="list-icon-box">
+              <svg width="55px" height="61px">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="list-title">LOREM IPSUM</h3>
             <p class="list-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
