--- a/index.html
+++ b/index.html
@@ -157,6 +157,36 @@
                 <p class="images-text images-text-bold">John Doe</p>
                 <p class="images-text">Product Designer</p>
               </div>
+              <ul class="test">
+                <li>
+                  <a href="/instagram">
+                    <svg weight="20px" height="20px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="/twitter">
+                    <svg weight="20px" height="20px">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="/facebook">
+                    <svg weight="20px" height="20px">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="/linkedin">
+                    <svg weight="20px" height="20px">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="mainpage-ourteam-image-border">
               <img
