--- a/index.html
+++ b/index.html
@@ -158,30 +158,30 @@
                 <p class="images-text">Product Designer</p>
               </div>
               <ul class="test">
-                <li>
+                <li class="test2">
                   <a href="/instagram">
-                    <svg weight="20px" height="20px">
+                    <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="/twitter">
-                    <svg weight="20px" height="20px">
+                    <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="/facebook">
-                    <svg weight="20px" height="20px">
+                    <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a href="/linkedin">
-                    <svg weight="20px" height="20px">
+                    <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
