--- a/index.html
+++ b/index.html
@@ -157,30 +157,30 @@
                 <p class="images-text images-text-bold">John Doe</p>
                 <p class="images-text">Product Designer</p>
               </div>
-              <ul class="test">
-                <li class="test2">
-                  <a href="/instagram">
+              <ul class="mainpage-ourteam-image-media-box">
+                <li class="mainpage-image-media-icon-left">
+                  <a class="mainpage-image-media-icon" href="/instagram">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="/twitter">
+                <li class="mainpage-image-media-icon-center">
+                  <a class="mainpage-image-media-icon" href="/twitter">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="/facebook">
+                <li class="mainpage-image-media-icon-center">
+                  <a class="mainpage-image-media-icon" href="/facebook">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="/linkedin">
+                <li class="mainpage-image-media-icon-right">
+                  <a class="mainpage-image-media-icon" href="/linkedin">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -199,8 +199,37 @@
                 <p class="images-text images-text-bold">John Doe</p>
                 <p class="images-text">Frontend Developer</p>
               </div>
+              <ul class="mainpage-ourteam-image-media-box">
+                <li class="mainpage-image-media-icon-left">
+                  <a class="mainpage-image-media-icon" href="/instagram">
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mainpage-image-media-icon-center">
+                  <a class="mainpage-image-media-icon" href="/twitter">
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mainpage-image-media-icon-center">
+                  <a class="mainpage-image-media-icon" href="/facebook">
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mainpage-image-media-icon-right">
+                  <a class="mainpage-image-media-icon" href="/linkedin">
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
-
             <li class="mainpage-ourteam-image-border">
               <img
                 src="images/team_card3.jpg"
@@ -212,6 +241,36 @@
                 <p class="images-text images-text-bold">John Doe</p>
                 <p class="images-text">Marketing</p>
               </div>
+              <ul class="mainpage-ourteam-image-media-box">
+                <li class="mainpage-image-media-icon-left">
+                  <a class="mainpage-image-media-icon" href="/instagram">
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mainpage-image-media-icon-center">
+                  <a class="mainpage-image-media-icon" href="/twitter">
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mainpage-image-media-icon-center">
+                  <a class="mainpage-image-media-icon" href="/facebook">
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mainpage-image-media-icon-right">
+                  <a class="mainpage-image-media-icon" href="/linkedin">
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="mainpage-ourteam-image-border">
               <img
@@ -224,6 +283,36 @@
                 <p class="images-text images-text-bold">John Doe</p>
                 <p class="images-text">UI Designer</p>
               </div>
+              <ul class="mainpage-ourteam-image-media-box">
+                <li class="mainpage-image-media-icon-left">
+                  <a class="mainpage-image-media-icon" href="/instagram">
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mainpage-image-media-icon-center">
+                  <a class="mainpage-image-media-icon" href="/twitter">
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mainpage-image-media-icon-center">
+                  <a class="mainpage-image-media-icon" href="/facebook">
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mainpage-image-media-icon-right">
+                  <a class="mainpage-image-media-icon" href="/linkedin">
+                    <svg width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
