add our clients

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
         </div>
       </section>
       <section class="mainpage-ourteam-bg-box">
-        <div class="container section mainpage-ourteam-box">
+        <div class="container section mainpage-section-box">
           <h2 class="mainpage-titles">Nasz zespół</h2>
-          <ul class="mainpage-ourteam-images-box">
+          <ul class="mainpage-elements-box">
             <li class="mainpage-ourteam-image-border">
               <img
                 src="images/team_card1.jpg"
@@ -313,6 +313,43 @@
                   </a>
                 </li>
               </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container mainpage-section-box">
+          <h2 class="mainpage-titles">Nasi klienci</h2>
+          <ul class="mainpage-elements-box">
+            <li class="mainpage-ourclients-box">
+              <svg width="106" height="60">
+                <use href="./images/icons.svg#icon-company-logo1"></use>
+              </svg>
+            </li>
+            <li class="mainpage-ourclients-box">
+              <svg width="106" height="60">
+                <use href="./images/icons.svg#icon-company-logo2"></use>
+              </svg>
+            </li>
+            <li class="mainpage-ourclients-box">
+              <svg width="106" height="60">
+                <use href="./images/icons.svg#icon-company-logo3"></use>
+              </svg>
+            </li>
+            <li class="mainpage-ourclients-box">
+              <svg width="106" height="60">
+                <use href="./images/icons.svg#icon-company-logo4"></use>
+              </svg>
+            </li>
+            <li class="mainpage-ourclients-box">
+              <svg width="106" height="60">
+                <use href="./images/icons.svg#icon-company-logo5"></use>
+              </svg>
+            </li>
+            <li class="mainpage-ourclients-box">
+              <svg width="106" height="60">
+                <use href="./images/icons.svg#icon-company-logo6"></use>
+              </svg>
             </li>
           </ul>
         </div>
