add footer media icons

--- a/index.html
+++ b/index.html
@@ -321,32 +321,32 @@
         <div class="container mainpage-section-box">
           <h2 class="mainpage-titles">Nasi klienci</h2>
           <ul class="mainpage-elements-box">
-            <li class="mainpage-ourclients-box">
+            <li class="mainpage-ourcustomers-box">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-company-logo1"></use>
               </svg>
             </li>
-            <li class="mainpage-ourclients-box">
+            <li class="mainpage-ourcustomers-box">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-company-logo2"></use>
               </svg>
             </li>
-            <li class="mainpage-ourclients-box">
+            <li class="mainpage-ourcustomers-box">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-company-logo3"></use>
               </svg>
             </li>
-            <li class="mainpage-ourclients-box">
+            <li class="mainpage-ourcustomers-box">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-company-logo4"></use>
               </svg>
             </li>
-            <li class="mainpage-ourclients-box">
+            <li class="mainpage-ourcustomers-box">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-company-logo5"></use>
               </svg>
             </li>
-            <li class="mainpage-ourclients-box">
+            <li class="mainpage-ourcustomers-box">
               <svg width="106" height="60">
                 <use href="./images/icons.svg#icon-company-logo6"></use>
               </svg>
@@ -356,22 +356,59 @@
       </section>
     </main>
     <footer class="footer-bg-box">
-      <div class="container footer-box">
-        <a class="logo logo-footer" href="./index.html" title="WebStudio">
-          <span class="logo-color-special">Web</span>Studio</a
-        >
-        <!-- Logo-->
-        <address class="footer-address-box">
-          <p class="footer-contact">m. Warszawa, Aleje Jerozolimskie 21</p>
-          <a
-            class="footer-contact footer-contact-alpha"
-            href="mailto:info@example.com"
-            >info@example.com</a
+      <div class="footer-box">
+        <div class="footer-inbox">
+          <a class="logo logo-footer" href="./index.html" title="WebStudio">
+            <span class="logo-color-special">Web</span>Studio</a
           >
-          <a class="footer-contact footer-contact-alpha" href="tel:+48111111111"
-            >+48 111 111 111</a
-          >
-        </address>
+          <!-- Logo-->
+          <address class="footer-address-box">
+            <p class="footer-contact">m. Warszawa, Aleje Jerozolimskie 21</p>
+            <a
+              class="footer-contact footer-contact-alpha"
+              href="mailto:info@example.com"
+              >info@example.com</a
+            >
+            <a
+              class="footer-contact footer-contact-alpha"
+              href="tel:+48111111111"
+              >+48 111 111 111</a
+            >
+          </address>
+        </div>
+        <div class="footer-joinus-box">
+          <span class="footer-media-title">DOŁĄCZ DO NAS</span>
+          <ul class="footer-media-icon-box">
+            <li>
+              <a class="footer-media-icon" href="/instagram">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="footer-media-icon" href="/twitter">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="footer-media-icon" href="/facebook">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="footer-media-icon" href="/linkedin">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
