--- a/portfolio.html
+++ b/portfolio.html
@@ -33,13 +33,19 @@
         </nav>
         <ul class="header-contact-box">
           <li>
-            <a class="header header-contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="header header-contact" href="mailto:info@devstudio.com">
+              <svg class="header-icons" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="header header-contact" href="tel:+48111111111"
-              >+48 111 111 111</a
+            <a class="header header-contact" href="tel:+48111111111">
+              <svg class="header-icons" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +48 111 111 111</a
             >
           </li>
         </ul>
@@ -194,22 +200,59 @@
       </div>
     </main>
     <footer class="footer-bg-box">
-      <div class="container footer-box">
-        <a class="logo logo-footer" href="./index.html" title="WebStudio">
-          <span class="logo-color-special">Web</span>Studio</a
-        >
-        <!-- Logo-->
-        <address class="footer-address-box">
-          <p class="footer-contact">m. Warszawa, Aleje Jerozolimskie 21</p>
-          <a
-            class="footer-contact footer-contact-alpha"
-            href="mailto:info@example.com"
-            >info@example.com</a
+      <div class="footer-box">
+        <div class="footer-inbox">
+          <a class="logo logo-footer" href="./index.html" title="WebStudio">
+            <span class="logo-color-special">Web</span>Studio</a
           >
-          <a class="footer-contact footer-contact-alpha" href="tel:+48111111111"
-            >+48 111 111 111</a
-          >
-        </address>
+          <!-- Logo-->
+          <address class="footer-address-box">
+            <p class="footer-contact">m. Warszawa, Aleje Jerozolimskie 21</p>
+            <a
+              class="footer-contact footer-contact-alpha"
+              href="mailto:info@example.com"
+              >info@example.com</a
+            >
+            <a
+              class="footer-contact footer-contact-alpha"
+              href="tel:+48111111111"
+              >+48 111 111 111</a
+            >
+          </address>
+        </div>
+        <div class="footer-joinus-box">
+          <span class="footer-media-title">DOŁĄCZ DO NAS</span>
+          <ul class="footer-media-icon-box">
+            <li>
+              <a class="footer-media-icon" href="/instagram">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="footer-media-icon" href="/twitter">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="footer-media-icon" href="/facebook">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="footer-media-icon" href="/linkedin">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
