add footer container, delete margins in social media boxes

--- a/portfolio.html
+++ b/portfolio.html
@@ -200,7 +200,7 @@
       </div>
     </main>
     <footer class="footer-bg-box">
-      <div class="footer-box">
+      <div class="container footer-box">
         <div class="footer-inbox">
           <a class="logo logo-footer" href="./index.html" title="WebStudio">
             <span class="logo-color-special">Web</span>Studio</a
