--- a/index.html
+++ b/index.html
@@ -158,28 +158,28 @@
                 <p class="images-text">Product Designer</p>
               </div>
               <ul class="mainpage-ourteam-image-media-box">
-                <li class="mainpage-image-media-icon-left">
+                <li>
                   <a class="mainpage-image-media-icon" href="/instagram">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="mainpage-image-media-icon-center">
+                <li>
                   <a class="mainpage-image-media-icon" href="/twitter">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="mainpage-image-media-icon-center">
+                <li>
                   <a class="mainpage-image-media-icon" href="/facebook">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="mainpage-image-media-icon-right">
+                <li>
                   <a class="mainpage-image-media-icon" href="/linkedin">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin"></use>
@@ -200,28 +200,28 @@
                 <p class="images-text">Frontend Developer</p>
               </div>
               <ul class="mainpage-ourteam-image-media-box">
-                <li class="mainpage-image-media-icon-left">
+                <li>
                   <a class="mainpage-image-media-icon" href="/instagram">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="mainpage-image-media-icon-center">
+                <li>
                   <a class="mainpage-image-media-icon" href="/twitter">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="mainpage-image-media-icon-center">
+                <li>
                   <a class="mainpage-image-media-icon" href="/facebook">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="mainpage-image-media-icon-right">
+                <li>
                   <a class="mainpage-image-media-icon" href="/linkedin">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin"></use>
@@ -242,28 +242,28 @@
                 <p class="images-text">Marketing</p>
               </div>
               <ul class="mainpage-ourteam-image-media-box">
-                <li class="mainpage-image-media-icon-left">
+                <li>
                   <a class="mainpage-image-media-icon" href="/instagram">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="mainpage-image-media-icon-center">
+                <li>
                   <a class="mainpage-image-media-icon" href="/twitter">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="mainpage-image-media-icon-center">
+                <li>
                   <a class="mainpage-image-media-icon" href="/facebook">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="mainpage-image-media-icon-right">
+                <li>
                   <a class="mainpage-image-media-icon" href="/linkedin">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin"></use>
@@ -284,28 +284,28 @@
                 <p class="images-text">UI Designer</p>
               </div>
               <ul class="mainpage-ourteam-image-media-box">
-                <li class="mainpage-image-media-icon-left">
+                <li>
                   <a class="mainpage-image-media-icon" href="/instagram">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="mainpage-image-media-icon-center">
+                <li>
                   <a class="mainpage-image-media-icon" href="/twitter">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="mainpage-image-media-icon-center">
+                <li>
                   <a class="mainpage-image-media-icon" href="/facebook">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="mainpage-image-media-icon-right">
+                <li>
                   <a class="mainpage-image-media-icon" href="/linkedin">
                     <svg width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin"></use>
@@ -356,7 +356,7 @@
       </section>
     </main>
     <footer class="footer-bg-box">
-      <div class="footer-box">
+      <div class="container footer-box">
         <div class="footer-inbox">
           <a class="logo logo-footer" href="./index.html" title="WebStudio">
             <span class="logo-color-special">Web</span>Studio</a
